Added Base app_id for ecosystem integration

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="base:app_id" content="6979f4802dbd4b464042adf3" />
   <script src="https://unpkg.com/ccxt@4.3.33/dist/ccxt.browser.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <title>Crypto Coin Dashboard - Calc Display</title>
