Added Base app_id for ecosystem integration

--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  
   <meta name="base:app_id" content="6979f4802dbd4b464042adf3" />
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="theme-color" content="#1f2937">
+
   <script src="https://unpkg.com/ccxt@4.3.33/dist/ccxt.browser.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <title>Crypto Coin Dashboard - Calc Display</title>
